// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Identity reducer handles actions - setDonationAllow 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "balance": null,
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": false,
    "freeUtxos": 0,
    "id": null,
    "lockedBalance": null,
    "name": "",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
    "transparentAddress": "",
  },
  "errors": "",
  "fetchingBalance": false,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions - setLoading 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "balance": null,
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": true,
    "freeUtxos": 0,
    "id": null,
    "lockedBalance": null,
    "name": "",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
    "transparentAddress": "",
  },
  "errors": "",
  "fetchingBalance": false,
  "loader": Object {
    "loading": true,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions - setLoadingMessage 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "balance": null,
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": true,
    "freeUtxos": 0,
    "id": null,
    "lockedBalance": null,
    "name": "",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
    "transparentAddress": "",
  },
  "errors": "",
  "fetchingBalance": false,
  "loader": Object {
    "loading": false,
    "message": "This is a loading message",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions - setShippingData 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "balance": null,
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": true,
    "freeUtxos": 0,
    "id": null,
    "lockedBalance": null,
    "name": "",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "Fishville",
      "country": "RumbleFish country",
      "firstName": "Rumble",
      "lastName": "Fish",
      "postalCode": "1337-455",
      "region": "Fish Region",
      "street": "RumbleFish street",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
    "transparentAddress": "",
  },
  "errors": "",
  "fetchingBalance": false,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions handles setBalance 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "balance": "2.34",
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": true,
    "freeUtxos": 0,
    "id": null,
    "lockedBalance": null,
    "name": "",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
    "transparentAddress": "",
  },
  "errors": "",
  "fetchingBalance": false,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions handles setErrors 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "balance": null,
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": true,
    "freeUtxos": 0,
    "id": null,
    "lockedBalance": null,
    "name": "",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
    "transparentAddress": "",
  },
  "errors": [Error: this is some error],
  "fetchingBalance": false,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions handles setFetchingBalance to false 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "balance": null,
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": true,
    "freeUtxos": 0,
    "id": null,
    "lockedBalance": null,
    "name": "",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
    "transparentAddress": "",
  },
  "errors": "",
  "fetchingBalance": false,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions handles setFetchingBalance to true 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "balance": null,
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": true,
    "freeUtxos": 0,
    "id": null,
    "lockedBalance": null,
    "name": "",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
    "transparentAddress": "",
  },
  "errors": "",
  "fetchingBalance": true,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions handles setIdentity 1`] = `
Object {
  "data": Object {
    "address": "testaddress",
    "addresses": Array [],
    "balance": null,
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": true,
    "freeUtxos": 0,
    "id": "test-id",
    "keys": Object {
      "sk": "sapling-private-key",
      "tpk": "transparent-private-key",
    },
    "lockedBalance": null,
    "name": "Saturn",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "transparentAddress": "transparent-test-address",
  },
  "errors": "",
  "fetchingBalance": false,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions handles setLockedBalance 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "balance": null,
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": true,
    "freeUtxos": 0,
    "id": null,
    "lockedBalance": "2.34",
    "name": "",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
    "transparentAddress": "",
  },
  "errors": "",
  "fetchingBalance": false,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles epics handles updateShippingData - finishes form submitting 1`] = `
Array [
  Array [
    false,
  ],
]
`;

exports[`Identity reducer handles epics handles updateShippingData - sets shipping data in store 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "balance": null,
    "certPrivKey": "",
    "certificate": "",
    "donationAddress": "",
    "donationAllow": true,
    "freeUtxos": 0,
    "id": null,
    "lockedBalance": null,
    "name": "",
    "onionAddress": "",
    "shieldedAddresses": Array [],
    "shieldingTax": true,
    "shippingData": Object {
      "city": "Fishville",
      "country": "RumbleFish country",
      "firstName": "Rumble",
      "lastName": "Fish",
      "postalCode": "1337-455",
      "region": "Fish Region",
      "street": "RumbleFish street",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
    "transparentAddress": "",
  },
  "errors": "",
  "fetchingBalance": false,
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;
